@@ -77,6 +77,7 @@ public class JabRefPreferences {
     public static final String WIN_LOOK_AND_FEEL = "lookAndFeel";
     public static final String LATEX_EDITOR_PATH = "latexEditorPath";
     public static final String WIN_EDT_PATH = "winEdtPath";
+    public static final String TEXMAKER_PATH = "texmakerPath";
     public static final String SHOW_SHORT = "showShort";
     public static final String LANGUAGE = "language";
     public static final String NAMES_LAST_ONLY = "namesLastOnly";
@@ -291,6 +292,7 @@ public class JabRefPreferences {
     public static final String CITE_COMMAND_LED = "citeCommandLed";
     public static final String CITE_COMMAND_WIN_EDT = "citeCommandWinEdt";
     public static final String CITE_COMMAND_EMACS = "citeCommandEmacs";
+    public static final String CITE_COMMAND_TEXMAKER = "citeCommandTexmaker";
     public static final String CITE_COMMAND_VIM = "citeCommandVim";
     public static final String CITE_COMMAND = "citeCommand";
     public static final String EXTERNAL_JOURNAL_LISTS = "externalJournalLists";
@@ -438,6 +440,7 @@ public class JabRefPreferences {
             defaults.put(WIN_LOOK_AND_FEEL, "com.jgoodies.looks.windows.WindowsLookAndFeel");
             defaults.put(WIN_EDT_PATH, "C:\\Program Files\\WinEdt Team\\WinEdt\\WinEdt.exe");
             defaults.put(LATEX_EDITOR_PATH, "C:\\Program Files\\LEd\\LEd.exe");
+            defaults.put(TEXMAKER_PATH, "C:\\Program Files\\Texmaker\\texmaker.exe");
             defaults.put(EMACS_PATH, "emacsclient.exe");
             defaults.put(EMACS_23, true);
             defaults.put(EMACS_ADDITIONAL_PARAMETERS, "-n -e");
@@ -454,6 +457,8 @@ public class JabRefPreferences {
             defaults.put(EMACS_PATH, "gnuclient");
             defaults.put(EMACS_23, false);
             defaults.put(EMACS_ADDITIONAL_PARAMETERS, "-batch -eval");
+            defaults.put(TEXMAKER_PATH, "texmaker");
+            
         }
         defaults.put(USE_PROXY, Boolean.FALSE);
         defaults.put(PROXY_HOSTNAME, "my proxy host");
@@ -738,6 +743,7 @@ public class JabRefPreferences {
         defaults.put(CITE_COMMAND_EMACS, "\\cite");
         defaults.put(CITE_COMMAND_WIN_EDT, "\\cite");
         defaults.put(CITE_COMMAND_LED, "\\cite");
+        defaults.put(CITE_COMMAND_TEXMAKER, "\\cite");
         defaults.put(FLOAT_MARKED_ENTRIES, Boolean.TRUE);
 
         defaults.put(USE_NATIVE_FILE_DIALOG_ON_MAC, Boolean.FALSE);
