@@ -94,6 +94,7 @@ search=search.png
 secondary_sorted_reverse=secondary_sorted_reverse.png
 setRelevant=relevance.png
 source=viewsource.gif
+texmaker=texmaker.png
 texstudio=texstudio.png
 toggleGroups=queue.png
 togglePreview=text_bottom.png
